consolidate budget jar

--- a/src/Web.WebApp/Shared/NavMenu.razor
+++ b/src/Web.WebApp/Shared/NavMenu.razor
@@ -4,6 +4,9 @@
     <AuthorizeView>
         <Authorized>
             <MudNavGroup Title="Expenses" Expanded="true">
+                <MudNavLink Href="/expense/new" IconColor="@Color.Primary" Icon="@Icons.Filled.AddCircle">
+                    Add Expense
+                </MudNavLink>
                 <MudNavLink Href="/expenses" IconColor="@Color.Primary" Icon="@Icons.Filled.Paid">
                     My Expenses
                 </MudNavLink>
