--- a/src/Web.WebApp/Shared/NavMenu.razor
+++ b/src/Web.WebApp/Shared/NavMenu.razor
@@ -38,7 +38,7 @@
                 <MudNavLink Href="/admin/users" IconColor="@Color.Primary" Icon="@Icons.Filled.People">
                     Users
                 </MudNavLink>
-                <MudNavLink Href="/admin/budgetjartemplates" IconColor="@Color.Primary" Icon="@Icons.Filled.AccountTree">
+                <MudNavLink Href="/admin/budgetjars" IconColor="@Color.Primary" Icon="@Icons.Filled.AccountTree">
                     Budget Jars
                 </MudNavLink>
                 <MudNavLink Href="/admin/expense-groups" IconColor="@Color.Primary" Icon="@Icons.Filled.Category">
