--- a/src/Web.WebApp/Pages/Admin/BudgetJarsPage.razor
+++ b/src/Web.WebApp/Pages/Admin/BudgetJarsPage.razor
@@ -1,6 +1,6 @@
-﻿@page "/admin/budgetjartemplates"
+﻿@page "/admin/budgetjars"
 
-@using Core.Application.Mediator.BudgetJarTemplates
+@using Core.Application.Mediator.BudgetJars
 @using Core.Application.Mediator.Icons
 @using Core.Application.Models
 @using Core.Domain.Enums
@@ -21,8 +21,8 @@
               RowEditPreview="BackupItem" RowEditCancel="ResetItemToOriginalValues"
               RowEditCommit="CommitChange" IsEditRowSwitchingBlocked="false" >
                 <HeaderContent>
-                    <MudTh><MudTableSortLabel InitialDirection="SortDirection.Ascending" SortBy="new Func<BudgetJarTemplateDto, object>(x=>x.Name)">Name</MudTableSortLabel></MudTh>
-                    <MudTh Style="width: 100px"><MudTableSortLabel SortBy="new Func<BudgetJarTemplateDto, object>(x=>x.Percentage)">Percentage</MudTableSortLabel></MudTh>
+                    <MudTh><MudTableSortLabel InitialDirection="SortDirection.Ascending" SortBy="new Func<BudgetJarDto, object>(x=>x.Name)">Name</MudTableSortLabel></MudTh>
+                    <MudTh Style="width: 100px"><MudTableSortLabel SortBy="new Func<BudgetJarDto, object>(x=>x.Percentage)">Percentage</MudTableSortLabel></MudTh>
                     <MudTh Style="width: 250px">Icon</MudTh>
                     <MudTh>Actions</MudTh>
                 </HeaderContent>
@@ -96,36 +96,36 @@
     [Inject] IDialogService Dialog { get; set; }
 
     private bool isLoading = false;
-    private List<BudgetJarTemplateDto> BudgetJars = new List<BudgetJarTemplateDto>();
+    private List<BudgetJarDto> BudgetJars = new List<BudgetJarDto>();
     private List<IconDto> IconAssets = new List<IconDto>();
 
     private MudForm form;
-    private BudgetJarTemplateDto model = new BudgetJarTemplateDto();
+    private BudgetJarDto model = new BudgetJarDto();
 
-    private BudgetJarTemplateValidator validator = new BudgetJarTemplateValidator();
+    private BudgetJarValidator validator = new BudgetJarValidator();
 
-    private BudgetJarTemplateDto elementBeforeEdit;
+    private BudgetJarDto elementBeforeEdit;
     private void BackupItem(object element)
     {
         elementBeforeEdit = new()
         {
-            Name = ((BudgetJarTemplateDto)element).Name,
-            Percentage = ((BudgetJarTemplateDto)element).Percentage,
-            IconId = ((BudgetJarTemplateDto)element).IconId
+            Name = ((BudgetJarDto)element).Name,
+            Percentage = ((BudgetJarDto)element).Percentage,
+            IconId = ((BudgetJarDto)element).IconId
         };
     }
 
     private void ResetItemToOriginalValues(object element)
     {
-        ((BudgetJarTemplateDto)element).Name = elementBeforeEdit.Name;
-        ((BudgetJarTemplateDto)element).Percentage = elementBeforeEdit.Percentage;
-        ((BudgetJarTemplateDto)element).IconId = elementBeforeEdit.IconId;
+        ((BudgetJarDto)element).Name = elementBeforeEdit.Name;
+        ((BudgetJarDto)element).Percentage = elementBeforeEdit.Percentage;
+        ((BudgetJarDto)element).IconId = elementBeforeEdit.IconId;
     }
 
     protected async override Task OnInitializedAsync()
     {
         isLoading = true;
-        BudgetJars = await Mediator.Send(new GetBudgetJarTemplatesQuery(true));
+        BudgetJars = await Mediator.Send(new GetDefaultBudgetJars());
         IconAssets = await Mediator.Send(new GetIconsQuery());
         isLoading = false;
     }
@@ -135,7 +135,7 @@
     {
         isLoading = true;
         StateHasChanged();
-        var budgetJar = (BudgetJarTemplateDto)element;
+        var budgetJar = (BudgetJarDto)element;
         InvokeAsync(async () => {
             var saved = await SaveChange(budgetJar);
             if (!saved)
@@ -156,11 +156,11 @@
         isLoading = true;
         await SaveChange(model);
 
-        model = new BudgetJarTemplateDto();
+        model = new BudgetJarDto();
         isLoading = false;
     }
 
-    private async Task<bool> SaveChange(BudgetJarTemplateDto budgetJar)
+    private async Task<bool> SaveChange(BudgetJarDto budgetJar)
     {
         Snackbar.Clear();
         try
@@ -181,15 +181,15 @@
                 }
             }
 
-            budgetJar.IsSystem = true;
+            budgetJar.IsDefault = true;
             budgetJar.Icon = IconAssets.Single(x => x.Id == budgetJar.IconId);
-            var savedId = await Mediator.Send(new SaveBudgetJarTemplateCommand(budgetJar));
+            var savedId = await Mediator.Send(new SaveBudgetJarCommand(budgetJar));
 
             // update UI
             if (BudgetJars.All(x => x.Id != savedId))
             {
                 budgetJar.Id = savedId;
-                BudgetJars.Add(BudgetJarTemplateDto.Clone(budgetJar));
+                BudgetJars.Add(BudgetJarDto.Clone(budgetJar));
             }
             form.Reset();
             Snackbar.Add("Budget Jar saved successfully", Severity.Success);
@@ -215,7 +215,7 @@
         {
             try
             {
-                var deleted = await Mediator.Send(new DeleteBudgetJarTemplateCommand(id));
+                var deleted = await Mediator.Send(new DeleteBudgetJarCommand(id, true));
                 if (deleted)
                 {
                     BudgetJars.Remove(BudgetJars.Single(x => x.Id == id));
