--- a/src/Web.WebApp/Components/FileUploader/FileUploader.razor.css
+++ b/src/Web.WebApp/Components/FileUploader/FileUploader.razor.css
@@ -83,7 +83,10 @@
 
 ::deep .fileUploader-item .fileUploader-file-name {
     background: rgba(255, 255, 255, 0.5);
+    height: 100%;
+    width: 100%;
     overflow-wrap: anywhere;
+    overflow: hidden;
 }
 
 ::deep .fileUploader-item.fileUploader-jpg,
